--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,9 @@
     "db:migrate:prod": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
+    "db:reset": "tsx scripts/reset-db.ts",
     "lint": "eslint src --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage"
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
@@ -24,7 +23,7 @@
     "@fastify/helmet": "^11.1.1",
     "@fastify/multipart": "^8.1.0",
     "@fastify/rate-limit": "^9.1.0",
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.2.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.3",
     "fastify": "^4.26.2",
@@ -32,12 +31,13 @@
     "nodemailer": "^6.9.12",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
+    "prisma": "^6.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.24",
+    "@types/node": "^20.19.25",
     "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
@@ -45,7 +45,6 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
-    "prisma": "^6.1.0",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
