--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,18 @@
 services:
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: ${PROJECT_NAME}_backend
-    restart: unless-stopped
-    env_file:
-      - ./backend/.env
-    ports:
-      - "3000:3000"
-    depends_on:
-      db:
-        condition: service_healthy
-    networks:
-      - internal
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-      args:
-        VITE_API_URL: http://localhost:3000/api
-    container_name: ${PROJECT_NAME}_frontend
-    restart: unless-stopped
-    ports:
-      - "80:80"
-    depends_on:
-      - backend
-    networks:
-      - internal
-
   db:
     image: postgres:16-alpine
-    container_name: ${PROJECT_NAME}_db
+    container_name: thales_db_dev
     restart: unless-stopped
+    ports:
+      - "5432:5432"
     environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=BZKZoWFFlg1nCGYfpUXi9C1j4LuMB8m8
+      - POSTGRES_DB=thales_dev
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d thales_dev"]
       interval: 10s
       timeout: 5s
       retries: 5
