--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Build & Lint
 
 on:
   push:
@@ -11,23 +11,8 @@ on:
       - main
 
 jobs:
-  test-backend:
+  build-backend:
     runs-on: ubuntu-latest
-    
-    services:
-      postgres:
-        image: postgres:16-alpine
-        env:
-          POSTGRES_USER: test
-          POSTGRES_PASSWORD: test
-          POSTGRES_DB: test
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - name: Checkout code
@@ -48,32 +33,11 @@ jobs:
         working-directory: ./backend
         run: npm run db:generate
 
-      - name: Run Prisma migrations
+      - name: Build backend
         working-directory: ./backend
-        env:
-          DATABASE_URL: postgresql://test:test@localhost:5432/test
-        run: npm run db:migrate:prod
+        run: npm run build
 
-      - name: Run tests
-        working-directory: ./backend
-        env:
-          DATABASE_URL: postgresql://test:test@localhost:5432/test
-          JWT_ACCESS_SECRET: test-access-secret-32-characters
-          JWT_REFRESH_SECRET: test-refresh-secret-32-characters
-          SMTP_HOST: smtp.test.com
-          SMTP_PORT: 587
-          SMTP_USER: test@test.com
-          SMTP_PASS: test
-          SMTP_FROM: test@test.com
-          S3_ENDPOINT: http://localhost:9000
-          S3_BUCKET: test
-          S3_ACCESS_KEY: test
-          S3_SECRET_KEY: test
-          FRONTEND_URL: http://localhost:5173
-          API_URL: http://localhost:3000
-        run: npm run test:coverage
-
-  test-frontend:
+  build-frontend:
     runs-on: ubuntu-latest
 
     steps:
@@ -95,6 +59,6 @@ jobs:
         working-directory: ./frontend
         run: npm run lint
 
-      - name: Run tests
+      - name: Build frontend
         working-directory: ./frontend
-        run: npm run test:coverage
+        run: npm run build
