feat: add product and section management routes, services, and schemas
- Implemented product routes with CRUD operations and file management.
- Added section and subsection routes for hierarchical organization.
- Created schemas for product and section validation using Zod.
- Developed services for handling product and section logic, including file compression and S3 integration.
- Introduced audit logging for product and section modifications.
- Enhanced file handling with compression for images, videos, and PDFs.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,6 +13,8 @@ FROM node:20-alpine AS runner
 
 WORKDIR /app
 
+RUN apk add --no-cache ffmpeg ghostscript
+
 COPY package.json package-lock.json ./
 RUN npm ci --omit=dev
 
