--- a/backend/package.json
+++ b/backend/package.json
@@ -24,14 +24,17 @@
     "@fastify/multipart": "^8.1.0",
     "@fastify/rate-limit": "^9.1.0",
     "@prisma/client": "^6.2.1",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.3",
     "fastify": "^4.26.2",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.12",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "prisma": "^6.2.1",
+    "sharp": "^0.34.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
