--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^17.2.3",
     "fastify": "^4.26.2",
     "fluent-ffmpeg": "^2.1.3",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.12",
     "pino": "^8.19.0",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/handlebars": "^4.0.40",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.19.25",
     "@types/nodemailer": "^6.4.14",
