--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,6 +1,13 @@
 node_modules
 dist
 .env
+.env.local
+.env.test
 *.log
 coverage
 .DS_Store
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
