--- a/backend/package.json
+++ b/backend/package.json
@@ -36,8 +36,9 @@
     "pino-pretty": "^10.3.1",
     "prisma": "^6.2.1",
     "sharp": "^0.34.5",
-    "zod": "^3.22.4",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "xlsx": "^0.18.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
