--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.22.2",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
