--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,24 @@
   "scripts": {
     "dev": "dotenv -e .env.local -- vite --host",
     "build": "tsc -b && vite build",
+    "build:analyze": "tsc -b && vite build --mode analyze",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "dotenv -e .env.local -- vite preview"
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "type-check": "tsc --noEmit",
+    "preview": "dotenv -e .env.local -- vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "prepare": "cd .. && husky frontend/.husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{css,json,md}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -44,6 +60,7 @@
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-virtual": "^3.13.12",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
@@ -60,11 +77,16 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "husky": "^9.1.7",
     "jsdom": "^23.2.0",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.4.35",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.44.1",
     "typescript": "^5.9.3",
     "vite": "^5.1.4",
+    "vite-plugin-compression": "^0.5.1",
     "vitest": "^1.3.1"
   },
   "pnpm": {
