--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,6 +83,7 @@
     "jsdom": "^23.2.0",
     "lint-staged": "^16.2.7",
     "postcss": "^8.4.35",
+    "prettier": "^3.7.3",
     "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.1",
     "terser": "^5.44.1",
