--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "recharts": "^3.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
