--- a/backend/package.json
+++ b/backend/package.json
@@ -26,12 +26,14 @@
     "@fastify/rate-limit": "^9.1.0",
     "@prisma/client": "^6.2.1",
     "@types/fluent-ffmpeg": "^2.1.28",
+    "archiver": "^7.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.3",
     "fastify": "^4.26.2",
     "fluent-ffmpeg": "^2.1.3",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.9.12",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
@@ -42,10 +44,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/archiver": "^7.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/handlebars": "^4.0.40",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.19.25",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
