--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,7 @@ FROM node:20-alpine AS runner
 
 WORKDIR /app
 
-RUN apk add --no-cache ffmpeg ghostscript
+RUN apk add --no-cache ffmpeg ghostscript postgresql-client
 
 COPY package.json package-lock.json ./
 RUN npm ci --omit=dev
